/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared.spec;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto.spec.decorator";
option java_multiple_files = true;

// Specs for AndroidShippingApiLevelCheckDecorator.
// Next tag: 4
message AndroidShippingApiLevelCheckDecoratorSpec {
  extend DecoratorSpec {
    optional AndroidShippingApiLevelCheckDecoratorSpec ext = 1014;
  }

  optional int32 min_api_level = 1 [(field_detail) = {
    help: "The minimum shipping api-level of the device on which tests will run."
  }];

  optional int32 vsr_min_api_level = 2 [(field_detail) = {
    help: "The minimum VSR api-level of the device on which tests will run."
  }];

  optional int32 vendor_min_api_level = 3 [(field_detail) = {
    help: "The minimum vendor api-level of the device on which tests will run."
  }];
}
